[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/ui/menu/MenuItem.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/menu/MenuController.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/font_64.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/ui/MenuTest.gd" type="Script" id=4]
[ext_resource path="res://textures/ui/white.png" type="Texture" id=5]
[ext_resource path="res://scenes/ui/menu/PlayerSelectSlider.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/ui/menu/SettingsSlider.tscn" type="PackedScene" id=7]

[node name="MenuTest" type="Node2D"]
script = ExtResource( 4 )

[node name="white" type="Sprite" parent="."]
modulate = Color( 0.396078, 0.396078, 0.396078, 1 )
scale = Vector2( 120, 67.5 )
texture = ExtResource( 5 )
centered = false

[node name="Label" type="Label" parent="."]
margin_left = 692.0
margin_top = 106.0
margin_right = 1163.0
margin_bottom = 207.0
custom_fonts/font = ExtResource( 3 )
text = "OBEY: The Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuController" parent="." instance=ExtResource( 2 )]
can_be_cancelled = false

[node name="NewGame" parent="MenuController" instance=ExtResource( 1 )]
position = Vector2( 380.011, 340 )
change_label_color = false

[node name="Label" type="Label" parent="MenuController/NewGame"]
margin_left = 140.0
margin_top = 20.0
margin_right = 437.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" parent="MenuController" instance=ExtResource( 1 )]
position = Vector2( 380.022, 500 )
change_label_color = false

[node name="Label" type="Label" parent="MenuController/Settings"]
margin_left = 139.989
margin_top = 20.0
margin_right = 499.989
margin_bottom = 121.0
custom_fonts/font = ExtResource( 3 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" parent="MenuController" instance=ExtResource( 1 )]
position = Vector2( 380, 640 )
change_label_color = false

[node name="Label" type="Label" parent="MenuController/Credits"]
margin_left = 140.0
margin_top = 20.0
margin_right = 560.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 3 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" parent="MenuController" instance=ExtResource( 1 )]
position = Vector2( 380, 780 )
change_label_color = false

[node name="Label" type="Label" parent="MenuController/Exit"]
margin_left = 140.0
margin_top = 20.0
margin_right = 560.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 3 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerSelectSlider" parent="." instance=ExtResource( 6 )]
visible = false

[node name="SettingsSlider" parent="." instance=ExtResource( 7 )]
[connection signal="activated" from="MenuController/NewGame" to="." method="_on_NewGame_activated"]
[connection signal="activated" from="MenuController/Settings" to="." method="_on_Settings_activated"]
[connection signal="activated" from="MenuController/Exit" to="." method="_on_Exit_activated"]
[connection signal="hidden" from="PlayerSelectSlider" to="." method="_on_slider_hidden"]
[connection signal="hidden" from="SettingsSlider" to="." method="_on_slider_hidden"]
